* spec'd and fixed some problems with using named_scope in edge

* Initial commit
