@@ -18,6 +18,8 @@
 
 class User < ActiveRecord::Base
   has_many :comments
+  
+  # Possible cases added by this plugin
   has_many :commented_posts, :through => :comments, :source => :post, :uniq => true
   has_many :commented_authors, :through => :commented_posts, :source => :author, :uniq => true
   has_many :posts_of_interest, :through => :commented_authors, :source => :posts_of_similar_authors, :uniq => true
@@ -25,14 +27,17 @@ class User < ActiveRecord::Base
 end
 
 class Author < User
+  # Normal cases
   has_many :posts
   has_many :categories, :through => :posts
+  has_many :commenters, :through => :posts, :uniq => true
+  has_many :assistants
+  
+  # Possible cases added by this plugin
   has_many :similar_posts, :through => :categories, :source => :posts
   has_many :similar_authors, :through => :similar_posts, :source => :author, :uniq => true
   has_many :posts_of_similar_authors, :through => :similar_authors, :source => :posts, :uniq => true
-  has_many :commenters, :through => :posts, :uniq => true
-  
-  has_many :assistants
+
 end
 
 class Post < ActiveRecord::Base
@@ -63,6 +68,15 @@ class Comment < ActiveRecord::Base
 end
 
 class Assistant < ActiveRecord::Base
+  # Normal cases
   belongs_to :author
   has_many :posts, :through => :author
+  
+  # Possible cases added by this plugin
+  with_options :uniq => true do |w|
+    w.has_many :categories, :through => :posts
+    w.has_many :similar_posts, :through => :categories, :source => :posts
+    w.has_many :similar_authors, :through => :similar_posts, :source => :author
+    w.has_many :posts_of_similar_authors, :through => :similar_authors, :source => :posts
+  end
 end
